# test-plash-bot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test-docker-compose.yml
migrations/: env.py
migrations/versions/: 87d09ea4ec1f_002_set_todo_telegram_id_to_biginteger.py  b4a9d813a619_001_create_todo_table.py
src/config/: __init__.py  bot.py  db.py  i18n.py  json.py  settings.py
src/database/: __init__.py  session.py
src/database/models/: __init__.py  todo.py
src/files/: users.json
src/handlers/: __init__.py  add_user.py  auth.py  check_domains.py  create_todo.py  delete_todo.py  delete_user.py  edit_user.py  get_all_todo.py  get_todo.py  main_admin.py  panels.py  todo.py  update_todo.py
src/keyboards/: __init__.py  admins.py  auth.py  todo.py
src/locales/ru/LC_MESSAGES/: messages.ftl
src/middlewares/: __init__.py  todo_repo.py  users_repo.py
src/repositories/: __init__.py  todo.py  users.py
src/utils/: __init__.py  domains.py  log.py
