[project]
name = "test-plash-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "lionex-ui",email = "eugenelionex@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "aiogram (>=3.19.0,<4.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "httpx[http2] (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "aiogram-i18n (>=1.4,<2.0)",
    "fluent-compiler (>=1.1,<2.0)",
    "fluent-runtime (>=0.4.0,<0.5.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 120
